<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健身骑行机</string>
    <string name="action_settings">设置</string>
    <string name="frament_first">首页</string>
    <string name="frament_second">消息</string>
    <string name="frament_thirst">好友</string>
    <string name="frament_four">广场</string>
    <string name="frament_five">更多</string>

    <!-- add by xushiyong 20150703 start -->
    <string name="string_register">注册</string>
    <string name="string_login">登陆</string>
    <string name="string_thirder_login">第三方登录</string>
    <string name="string_phone_pre">中国(+86)</string>
    <string name="string_get_phone_verification">获取验证码</string>
    <string name="string_input_phonenumber">请输入手机号码</string>
    <string name="string_input_verificationnumber">验证码</string>
    <string name="string_input_pwd">请设置密码</string>
    <string name="string_input_pwd_confirm">请再次输入密码</string>

    <!-- add by xushiyong 20150703 end -->

    <string name="string_splash_desc">欢迎页短暂展示图</string>
    <string name="string_calori">卡路里消耗</string>
    <string name="string_calori_total">300 cal</string>
    <string name="string_distance_total">50 km/h</string>
    <string name="string_distance">0 km</string>
    <string name="string_count_time">00:00:00</string>
    <string name="string_rongtai">Rongtai</string>
    <string name="string_number">总积分25</string>
    <string name="string_today_number">今天燃烧总量</string>
    <string name="string_all_number">累计燃烧</string>
    <string name="string_max_recorder_number">最高纪录</string>
    <string name="string_today_friend_list">今日好友榜排行</string>
    <string name="hot_action">热门活动</string>
    <string name="my_action">我的活动</string>
    <string name="action_rule">比赛规则</string>
    <string name="want_join">想参加</string>
    <string name="aleady_join">已参加</string>
    <string name="i_want_join">我想报名</string>
    <string name="rule">纪录天数不少于10天(小于10天)每天记录时间不超过1小时(超出作废)</string>
    <string name="refuse">拒接</string>
    <string name="accept">接受</string>
	<string name="racing">竞速冠军</string>
	<string name="endurance">耐力之王</string>
	<string name="nearbypeople">附近的人</string>
	<string name="super_biker">骑行达人</string>
	<string name="search">查找</string>
	<string name="thirder_login">第三方登陆</string>
	
	<string name="phone_or_email">手机或邮箱</string>
	<string name="password">密码</string>
	<string name="string_return">返回</string>
	<string name="getnumber">获取验证码</string>
	<string name="nlzw">耐力之王</string>
	<string name="jsgj">竞速冠军</string>
		<string name="nlzw_ds">PK当日最高里程数</string>
	<string name="jsgj_ds">PK一分钟内最高燃烧量</string>
	<string name="pk_rule">PK积分奖励规则</string>
	<string name="string_serch">搜索</string>
	<string name="string_look">查找</string>
	<string name="string_cancel">取消</string>
	<string name="string_please_input_keyword">请输入关键字</string>
	<string name="others">同道中人</string>
</resources>