<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >

    <!-- 两个头像 中间vs文字 -->

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:background="@color/black" >

        <TextView
            android:id="@+id/txtVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="VS"
            android:textColor="@color/red"
            android:textSize="@dimen/vs_textsize" />

        <com.signalripple.fitnessbike.view.CircleImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/txtVS"
            android:src="@drawable/xianjian01" />

        <com.signalripple.fitnessbike.view.CircleImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txtVS"
            android:src="@drawable/xianjian03" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

    <!-- 耐力之王 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivNlzw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stamina_competition" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/nlzw"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/nlzw_ds"
                android:textColor="@color/gray" />
        </LinearLayout>

        <!-- 竞速冠军 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivJsgj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/speedcompition" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/jsgj"
                android:textColor="@color/sea_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/jsgj_ds"
                android:textColor="@color/gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="0.4"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.3"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/pk_rule"
            android:textColor="@color/gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.3"
            android:background="@color/gray" />
    </LinearLayout>

</LinearLayout>