<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_person" >

    <FrameLayout
        android:id="@+id/companyIcon"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/outter" >

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="@drawable/inner" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutLoginAndRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/companyIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login"
            android:textColor="@color/sea_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text=" / "
            android:textColor="@color/sea_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_register"
            android:textColor="@color/sea_blue" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtThirderLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutLoginAndRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/thirder_login"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtThirderLogin"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ibQQLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_qq" />

        <ImageButton
            android:id="@+id/ibWeiXinLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_weixin" />
    </LinearLayout>

</RelativeLayout>