<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:makeramen="http://schemas.android.com/apk/res/com.signalripple.fitnessbike"
    android:layout_width="match_parent"
    android:layout_height="460dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <com.makeramen.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test"
                android:scaleType="fitXY"
                makeramen:corner_radius="12dp" >
            </com.makeramen.RoundedImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="38dp"
                android:layout_marginLeft="12dp"
                android:gravity="bottom"
                android:text="九月里程赛事即将展开"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="报名时间:2015.9.16"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/icon_detail"
                android:gravity="bottom" />
            
            <!-- 用于遮盖底部与俺脚的填底的视图 -->
            <View 
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/white"
                android:layout_gravity="bottom"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:background="@drawable/round_background"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/action_rule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/rule"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="121"
                        android:textColor="@color/store_blue"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/want_join"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="121"
                        android:textColor="@color/store_blue"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aleady_join"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@drawable/button_selector_normalblue_pressgray"
                android:text="@string/i_want_join" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>